# youtube

./: pyproject.toml
youtube-application/: main.py
youtube-application/core/: config.py
